--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -7,7 +7,10 @@ interface LinkOptions {
 type Link = LinkOptions | string;
 
 // Link list
-const links: Link[] = ['Home', 'Stories', 'News', 'Resources', 'Products', 'Contact'];
+const links: Link[] = [
+  'Home', 'Stories', 'News', 'Resources', 'Products',
+  {name: 'Contact', href: '/home#letsconnect'}
+];
 
 // Normalized options
 const normalizedOptions: LinkOptions[] = links.map(
