Go to prod boys

--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -8,8 +8,9 @@ type Link = LinkOptions | string;
 
 // Link list
 const links: Link[] = [
-  'Home', 'Stories', 'News', 'Resources', 'Products',
-  {name: 'Contact', href: '/home#letsconnect'}
+  { name: 'Home', href: '/' },
+  'Stories', 'News', 'Resources', 'Products',
+  { name: 'Contact', href: '/#letsconnect' }
 ];
 
 // Normalized options
