--- a/src/components/ContentSection.astro
+++ b/src/components/ContentSection.astro
@@ -4,11 +4,11 @@
 
 <style is:global>
   div.section {
-    & > p.title {
+    & p.title {
       @apply sm:text-5xl text-3xl text-[#FFD200] font-semibold my-10
     }
 
-    & > p.content {
+    & p.content {
       @apply sm:text-2xl text-xl text-zinc-50 max-w-[50rem]
     }
   }
