--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,10 @@ import ContentSection from '@/components/ContentSection.astro';
   </ContentSection>
 
   <ContentSection>
-    <p class='title'>Events</p>
+    <a href='/news' class='decoration-dashed'>
+      <p class='title'>Events</p>
+    </a>
+
     <p class='content'>
       Nhắc tới ADaPT, không thể không kể tới những hoạt động thú vị xung quanh những
       ứng dụng của công nghệ. Một số sự kiện thường niên của ADaPT như: sự kiện chào
@@ -43,7 +46,10 @@ import ContentSection from '@/components/ContentSection.astro';
   </ContentSection>
 
   <ContentSection>
-    <p class='title'>Products</p>
+    <a href='/products' class='decoration-dashed'>
+      <p class='title'>Products</p>
+    </a>
+
     <p class='content'>
       Trong 8 năm hoạt động, câu lạc bộ đã cho ra mắt rất nhiều sản phẩm công nghệ
       sáng tạo. Một số sản phẩm có thể kể đến như: giàn phun sương khử khuẩn, ứng dụng
