Preconnect to worker

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ const { title, description } = Astro.props;
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/webp' href='/favicon.webp' />
 		<meta name='generator' content={Astro.generator} />
+		<link rel="preconnect" href="https://adapt-wordpress-cache.aquapi.workers.dev" />
 		<title>{title}</title>
 	</head>
 	<body>
