--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -9,7 +9,7 @@ import List from '@/components/posts/List.tsx';
 >
   <main class='bg-[#F8F8F8] py-16 w-screen'>
     <h1 class='sm:text-5xl text-3xl text-center text-[#303030]'>News</h1>
-    <div class='mt-10 text-[#454545] flex flex-col items-center gap-4 w-screen min-h-screen text-xl'>
+    <div class='mt-10 text-[#454545] flex flex-col sm:items-center pl-6 gap-4 w-screen min-h-screen text-xl'>
       <List client:load />
     </div>
   </main>
