--- a/src/components/StoryList.astro
+++ b/src/components/StoryList.astro
@@ -74,12 +74,12 @@ const stories: ({
 ---
 
 {stories.map((story) => <>
-  <div class='pl-6 pr-6 pt-16 flex mr-auto ml-auto w-full max-w-[1663px] flex-col md:flex-row [&:nth-child(odd)]:md:flex-row-reverse'>
-    <div class='mb-auto mt-auto md:w-1/2'>
+  <div class='pl-6 pr-6 pt-16 flex mr-auto ml-auto w-full max-w-[800px] flex-col'>
+    <div class='mb-auto mt-auto'>
       <Image src={story.image} alt={story.header} class="w-full h-auto rounded-3xl" />
     </div>
 
-    <div class="text-center mt-auto mb-auto md:w-1/2 p-10">
+    <div class="text-center mt-auto mb-auto p-10">
       <h1 class="text-red-700 text-[40px] font-normal pt-8">{story.header}</h1>
       <p class="text-white pt-8 pl-4 pr-4 text-[20px]">{story.content}</p>
     </div>
@@ -87,7 +87,7 @@ const stories: ({
 </>)}
 
 {stories.map((story) => (
-  typeof story.bannerImage === 'undefined'
+  story.bannerImage == null
     ? <></>
     : <Image src={story.bannerImage} alt={story.header} class="w-full max-w-[1663px] ml-auto mr-auto pt-8 pl-6 pr-6" />
 ))}
