--- a/src/pages/stories.astro
+++ b/src/pages/stories.astro
@@ -7,7 +7,7 @@ import StoryList from '@/components/StoryList.astro';
   title='Stories - ADaPT'
   description='GEN 1, 2 Nhận thấy tầm quan trọng của việc xây dựng niềm đam mê và yêu thích công nghệ trong các bạn trẻ, ADaPT ra đời với sứ mệnh đem đến một cái nhìn khác đối với một lĩnh vực được coi là vô cùng khô khan và khó tiếp cận. Được bảo trợ…'
 >
-  <main class='bg-[#303030]'>
+  <main class='bg-[#303030] flex flex-col items-center'>
     <h1 class="pt-16 sm:text-5xl text-3xl text-center text-zinc-50">Stories</h1>
     <StoryList />
   </main>
