--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '@fontsource-variable/rubik';
 import '@fontsource-variable/nunito';
 
 import Navbar from '@/components/Navbar.astro';
+import Footer from '@/components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -13,7 +14,7 @@ const { title, description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang='en'>
+<html lang='en' class="scroll-smooth">
 	<head>
 		<meta charset='UTF-8' />
 		<meta name='description' content={description} />
@@ -24,8 +25,9 @@ const { title, description } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-	  <Navbar />
-		<slot />
+		<Navbar />
+			<slot />
+		<Footer />
 	</body>
 </html>
 
