--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '@/layouts/Layout.astro';
 
 import HeroSection from '@/components/HeroSection.astro';
 import ContentSection from '@/components/ContentSection.astro';
+
+import LetsConnect from '@/components/LetsConnect.astro';
 ---
 
 <Layout
@@ -57,5 +59,6 @@ import ContentSection from '@/components/ContentSection.astro';
       minh aTrade,… Hãy cùng chờ đợi thêm những sản phẩm sắp ra mắt của ADaPT nhé!
     </p>
   </ContentSection>
-  </div>
+
+  <LetsConnect />
 </Layout>
