--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import List from '@/components/posts/List.tsx';
+import List from '@/components/posts/list.tsx';
 ---
 
 <Layout
