--- a/src/pages/news/read.astro
+++ b/src/pages/news/read.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import ReadPost from '@/components/posts/Read.tsx';
+import ReadPost from '@/components/posts/read.tsx';
 ---
 
 <Layout
