--- a/src/pages/resources/index.astro
+++ b/src/pages/resources/index.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout
-    title="Resources - ADaPT"
-    description="ADaPT Engineering resources"
+    title='Resources - ADaPT'
+    description='ADaPT Engineering resources'
 >
   <h1 class='sm:text-7xl text-5xl text-zinc-50 pb-6'>Resources</h1>
 </Layout>
